# calbum

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg  test-requirements.txt
calbum/: cmd.py
calbum/core/: model.py
calbum/filters/: __init__.py  album.py  timeline.py  timeline_filter.py
calbum/sources/: calendar.py  exiftool.py  image.py
tests/: test_cmd.py
tests/core/: test_model.py
tests/resources/: __init__.py  calendar.ics  create_images.sh  image-03.tif  images.yaml  video-02.3gp
tests/sources/: __init__.py  test_calendar.py  test_exiftool.py  test_image.py
