[metadata]
name = calbum
url = https://github.com/JoProvost/calbum
author = Jonathan Provost
author-email = jprovost.sh@gmail.com
summary = An unattended calendar-based photo organiser
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7

[files]
packages =
    calbum

[entry_points]
console_scripts =
    calbum = calbum.cmd:main
    ironic-dbsync = ironic.cmd.dbsync:main
    ironic-conductor = ironic.cmd.conductor:main
    ironic-rootwrap = oslo_rootwrap.cmd:main
    
[nosetests]
tests = tests
no-path-adjustment = 1
logging-level=INFO

[wheel]
universal = 1
